# certipy-acl

./: .gitignore  ASK_CHATGPT.md  CONTRIBUTING.md  Case_Study_BloodHound_vs_CertipyACL.md  HANDLING_OUTPUT.md  KNOWN_ISSUES.md  LICENSE  README.md  REALTIME_LIMITATIONS.md  RELEASE.md  Setup & Usage Guide  USAGE-STRATEGY.md  __main__.py  auth.py  parse_acl.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: known_issues.md  stealth-playbook.md  usage.md
docs/guides/: setup_usage_guide.md  usage_strategy.md
docs/reference/: project_structure.md
src/certipy_acl/: cli.py
src/certipy_acl/core/: filters.py  ldap_client.py  rights.py
src/certipy_tool/: __main__.py  auth.py  parse_acl.py
tests/: test_parse_acl.py
