[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certipy-acl"
version = "0.1.0"
description = "Lightweight LDAP ACL mapper for AD (stealthy, single LDAP bind)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Judith Mader (xpl0itnik)" }]
requires-python = ">=3.8"
dependencies = ["ldap3>=2.9", "impacket>=0.11.0"]

[project.urls]
Homepage = "https://github.com/xploitnik/certipy-acl"
Issues = "https://github.com/xploitnik/certipy-acl/issues"

[project.scripts]
certipy-acl = "certipy_tool.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["certipy_tool*"]


